# RotorTM

./: .gitignore  .service_call.bash.swp  CMakeLists.txt  LICENSE  README.md  autopep.bash  gui.py  package.xml  runsim.py  service call  service_call.bash  simulation_base.py
config/attach_mechanism/: 2_robots_rigid_links_mechanism.yaml  3_robots_cable_mechanism.yaml  4_robots_cable_mechanism.yaml  5_robots_rigid_links_mechanism.yaml  6_robots_cable_mechanism.yaml  rigid_links_mechanism.yaml
config/control_params/: dragonfly_control_gains.yaml  pointmass_cable_gains.yaml  triangular_payload_cooperative_cable_gains.yaml
config/initial_condition/: 3_robots_triangular_payload_initial_condition.yaml  4_robots_fedexbox_initial_condition.yaml  4_robots_pitch_-15_degree_fedexbox_initial_condition.yaml  6_robots_fedexbox_initial_condition.yaml  singlequad_ptmass_initial_condition.yaml
config/load_params/: fedex_box_payload.yaml  long_bar_wood_payload.yaml  pointmass_payload.yaml  triangular_cardboard_payload.yaml  triangular_payload.yaml
config/min_derivative_traj_optimization_option/: min_6th_order_derivative.yaml
config/payload_path/: no_moving_path.csv  path1.csv
config/uav_params/: snapdragonfly.yaml
control/: controller.py  controller_node.py  cooperative_attitude_controller.m  cooperative_attitude_controller.py  cooperative_payload_controller.m  cooperative_payload_controller.py  cooperative_suspended_payload_controller.m  cooperative_suspended_payload_controller.py  geometric_controller.m  geometric_controller.py  hover_controller.m  quadrotor_attitude_controller.m  quadrotor_attitude_controller.py  rigid_links_cooperative_payload_controller.m  rigid_links_cooperative_payload_controller.py  single_payload_geometric_controller.m  single_payload_geometric_controller.py
control/cable_optimal_distribution/: cable_distribution_constr.m  cable_distribution_optimization.m  optimal_cable_distribution.m
doc/: Simulator_Params.md  trajectory_generator.md
dynamics/: quadEOM.m  quadEOM.py  quadEOM_readonly.m  quadEOM_readonly.py
dynamics/multiple_qd_rigidbody_pl_hybrid_dynamics/: cooperativeGuard.m  cooperativeGuard.py  hybrid_cooperative_rigidbody_pl_transportationEOM.m  hybrid_cooperative_rigidbody_pl_transportationEOM.py  rigidbody_payloadEOM_readonly.m  rigidbody_payloadEOM_readonly.py  slack_quadEOM_readonly.m  slack_quadEOM_readonly.py  taut_quadEOM_readonly.m  taut_quadEOM_readonly.py
dynamics/pt_mass_hybrid_dynamics/: hybrid_ptmass_pl_transportationEOM.m  hybrid_ptmass_pl_transportationEOM.py  slackToTaut.m  slackToTaut.py  slack_ptmass_payload_quadEOM_readonly.m  slack_ptmass_payload_quadEOM_readonly.py  tautToSlack.m  tautToSlack.py  taut_ptmass_payload_quadEOM_readonly.m  taut_ptmass_payload_quadEOM_readonly.py
dynamics/rigid_links_payload_multiple_quad/: rigid_links_cooperative_rigidbody_pl_EOM.m  rigid_links_cooperative_rigidbody_pl_EOM.py  rigidbody_structEOM_readonly.m  rigidbody_structEOM_readonly.py
keyboard2wrench/: CMakeLists.txt  package.xml
launch/: rotortm_simulation.launch  rviz.launch  rviz_config.rviz
maps/: map0.txt  map1.txt
mesh/: triangular_payload.STL  triangular_payload_bin.STL
rotor_tm_config/: CMakeLists.txt  package.xml
rotor_tm_control/: CMakeLists.txt  package.xml  setup.py
rotor_tm_keyboard2wrench/: CMakeLists.txt  ext_wrench_sub.py  keyboard2wrench.py  package.xml
rotor_tm_msgs/: CMakeLists.txt  package.xml
rotor_tm_msgs/msg/: CenPL_Command.msg  FMCommand.msg  PositionCommand.msg  RPMCommand.msg  SO3Command.msg  StatusData.msg  TRPYCommand.msg
rotor_tm_sim/: CMakeLists.txt  package.xml  setup.py
rotor_tm_sim/launch/: controller_launcher.launch  editable_launch.launch  rotortm.launch  rotortm_cable_4.launch  rotortm_cable_6.launch  rotortm_ptmass.launch  rotortm_rlink_3.launch  rotortm_simulation.launch  rotortm_single_controller_node.launch  rviz.launch  rviz_config.rviz  rviz_config_ukf_vio.rviz  sim_launcher.launch
rotor_tm_sim/mesh/: fedex_box_24x24x18in.STL  long_bar.STL  triangular_payload.STL
rotor_tm_sim/mesh/uav/: hummingbird.stl  race.STL  race.stl
rotor_tm_sim/src/rotor_tm_sim/: runsim.py  simulation_base.py
rotor_tm_traj/: CMakeLists.txt  package.xml
rotor_tm_traj/srv/: Circle.srv  CircleWithRotation.srv  CoprStatusCmd.srv  Line.srv  StepPose.srv
rotor_tm_traj/traj/: create_options.py  map.py  traj.py  traj_node.py
rotor_tm_traj/traj/Optimization/: allocate_time.py  generate_2pt_corridor_constraint.py  generate_constraint.py  generate_corridor_constraint.py  generate_path_with_time.py  optimize_traj.py
rotor_tm_traj/traj/Optimization/entire_path/: generate_H.py  generate_poly.py  generate_poly_coeff.py  generate_polynomial_matrix.py
rotor_tm_traj/traj/Optimization/toffset/: generate_H_with_toffset.m  generate_constraint_toffset.m  generate_corridor_constraint_toffset.m  generate_poly_toffset.m
rotor_tm_utils/: CMakeLists.txt  package.xml  setup.py
runsim/: cooperative_hybrid_test_trajectory.asv  cooperative_hybrid_test_trajectory.m  cooperative_hybrid_test_trajectory.py  hybrid_test_trajectory.asv  hybrid_test_trajectory.m  hybrid_test_trajectory.py  init_script.m  init_script.py  init_traj_script.m  init_traj_script.py  rigid_links_test_trajectory.m  rigid_links_test_trajectory.py  robot_team_setup.m  robot_team_setup.py  runsim.m  runsim.py
runsim/gui/: Circular_Traj_Params.mlapp  Minderivative_Traj_Params.mlapp  RotorTM_GUI.mlapp
traj/: circle.m  create_options.py  generate_poly.py  line_quintic_traj_generator.m  main.py  map.py  min_snap_traj_generator.m  offline_traj.m  quadprog.py  simplify_path.m  traj.py  traj_node.py
utils/: LoadMapAndPlanning.m  check_inelastic_collision_idx.m  clamp_thrust_moment.m  init_cable_state.m  init_state.m  init_state_copr_suspended_pl.m  istaut.m  ptmass_inelastic_cable_collision.m  read_params.py  rigidbody_polygon_pos.m  rigidbody_quad_inelastic_cable_collision.asv  rigidbody_quad_inelastic_cable_collision.m  rosutilslib.py  stateToPl.m  stateToPlQdTeamCable.m  stateToPtPl.m  stateToQd.m  terminate_check.m  verticesToconvhull.m
(+97 files in other folders)
