<?xml version="1.0"?>
<package>
  <name>rotor_tm_keyboard2wrench</name>
  <version>1.0.0</version>
  <description>Generic keyboard to wrench</description>

  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>

  <author>Graylin Trevor Jay</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
